--- a/Mifalot-app/src/app/app.component.css
+++ b/Mifalot-app/src/app/app.component.css
@@ -11,8 +11,6 @@
 	width: 100%;
 	height: 100%;
 	max-height: 100%;
-
-	/*position:fixed;*/
 }
 
 #btn-logout, .fa-sign-out
@@ -25,3 +23,7 @@
 	float: right;
 }
 
+#displayName
+{
+	font-size: 100%;
+}
