--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -5,7 +5,8 @@
         <div class = "container-fluid" id = "navfluid">
             <div class = "navbar-header">
                 <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
-                <a class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
+                <a class = "navbar-brand text-center" id = "displayName"> {{ displayName }} </a>
+                <a class = "navbar-brand align-right fa fa-sign-out" (click) = "logout()"> התנתק </a>
             </div>
         </div>
     </nav>
