--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -53,7 +53,8 @@
 					<table class = "table table-hover" id = "dev-table">
 						<thead>
 							<tr>
-								
+								<th> נכח באימון </th>
+								<th> ת.ז </th>
 								<th> שם משפחה </th>
 								<th> שם פרטי </th>
 								<th> # </th>
