finished to insert data

--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -1,7 +1,7 @@
-<!-- <div class = "app-content"> -->
+ <div class = "app-content"> 
 
     <!-- Nav bar -->
-<!--    <nav *ngIf = "isLoggedIn" class = "navbar navbar-default navbar-default" role = "navigation">
+    <nav *ngIf = "isLoggedIn" class = "navbar navbar-default navbar-default" role = "navigation">
         <div class = "container-fluid" id = "navfluid">
             <div class = "navbar-header">
                 <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
@@ -10,11 +10,10 @@
             </div>
         </div>
     </nav>
- -->
+ 
 
     <!-- Routing pages -->
-  <!--  <router-outlet> </router-outlet> 
+   <router-outlet> </router-outlet> 
 
-</div> -->
-<app-insert></app-insert>
+</div> 
 
