Adding 'associate-teams' component & fixing some bugs in login page

--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
@@ -6,7 +6,7 @@
 
         <!-- Select Team -->
         <div class = "row">
-            <div *ngIf = "noTeamSelected && !addPupils">
+            <div *ngIf = "noTeamSelected && !addPupils && !removePupils">
                 <div class = "team-title col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h4 class = "text-right"> :בחירת קבוצה </h4>
                 </div>
