--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -1,4 +1,6 @@
  
+ <!-- ====================================================================================================================================== -->
+
  <!-- Error message -->
 
  <div class = "container">
@@ -11,6 +13,7 @@
 
  <!-- /Error Message -->
 
+<!-- ====================================================================================================================================== -->
 
  <!-- Login Form -->
 
@@ -24,7 +27,7 @@
     <form class = "form-signin" (submit) = "loginWithEmail($event, email.value, password.value)">
       <label for = "email" class = "sr-only"> כתובת מייל </label>
       <div class = "input-group">
-        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'mifalotManager@gmail.com'> <!-- value = 'guest@gmail.com'-->
+        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'guest@gmail.com'>
         <span class = "input-group-addon"><i class = "fa fa-user"></i></span> 
       </div>
 
@@ -32,7 +35,7 @@
 
       <label for = "password" class = "sr-only"> סיסמה </label>
       <div class = "input-group">
-        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required = "" value = 'mifalot123'> <!--value = 'mifalot'-->
+        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required = "" value = 'mifalot'>
         <span class = "input-group-addon"><i class = "fa fa-lock"> </i> </span>
       </div>
 
@@ -42,9 +45,11 @@
     </form>
 
     <hr>
-    <a [routerLink] = "['/register']" style = "cursor: pointer;"> הירשם כעת </a>
+    <a class = "btn-register" [routerLink] = "['/register']"> הירשם כעת </a>
   </div>
 </div>
 
 <!-- /Login Form -->
+
+<!-- ====================================================================================================================================== -->
 
