--- a/Mifalot-app/src/app/pages/users-management/users-management.component.html
+++ b/Mifalot-app/src/app/pages/users-management/users-management.component.html
@@ -7,10 +7,10 @@
     <div *ngIf = "!userSelected && !showUserTeams">
   
         <div class = "row">
-            <div class = "col-md-12 text-center"> 
+            <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"> 
                 <h5> לחץ על משתמש על מנת לערוך את הרשאותיו </h5>
             </div>
-            <div class = "col-sm-4 col-sm-offset-2">
+            <div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <div class = "list-group text-right" id = "list-managers">
                     <a class = "list-group-item text-center active"> מנהלי אזור  </a>
                     <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
@@ -19,7 +19,7 @@
                 </div>
             </div>
 
-            <div class = "col-sm-4">
+            <div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <div class = "list-group text-right" id = "list-trainers">
                     <a class = "list-group-item text-center active"> מאמנים </a>
                     <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
