--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -39,8 +39,8 @@
                   <td> פלאפון </td>   
                 </tr>
                 <tr>     
-                  <td> {{ user.birthDate }} </td>
-                  <td> תאריך לידה  </td>   
+                  <td> {{ user.ID }} </td>
+                  <td> תעודת זהות  </td>   
                 </tr>
               </tbody>
             </table>
