--- a/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
+++ b/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
@@ -45,8 +45,8 @@
                                         <td> פלאפון </td>   
                                     </tr>
                                     <tr>     
-                                        <td> {{ user.birthDate }} </td>
-                                        <td> תאריך לידה  </td>   
+                                        <td> {{ user.ID }} </td>
+                                        <td> תעודת זהות  </td>   
                                     </tr>
                                     </tbody>
                                 </table>
