--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -38,9 +38,8 @@
 
   <!-- User wait for admin to confirm him -->
   <div *ngIf = "user.$key == 'permission' && user.$value == 4" class = "container confirm" >
-
       <div class = "panel panel-warning text-right center">
-        <div class = "panel-heading"> הינך ממתין לאישור מנהל </div>
+        <div class = "panel-heading"> הינך ממתין לאישור מנהל <i class = "fa fa-exclamation-triangle fa-2x pull-left" aria-hidden = "true"></i> </div>
         <div class = "panel-body"> זמנית, אינך יכול להשתמש באפליקציה עד אישורך ע״י מנהל. אנא נסה שנית מאוחר יותר </div>
       </div>
 
@@ -48,9 +47,8 @@
 
    <!-- User was blocked by admin -->
   <div *ngIf = "user.$key == 'permission' && user.$value == 5" class = "container confirm" >
-
       <div class = "panel panel-danger text-right center">
-        <div class = "panel-heading"> משתמש זה נחסם </div>
+        <div class = "panel-heading"> משתמש זה נחסם <i class = "fa fa-ban fa-2x pull-left" aria-hidden = "true"></i> </div>
         <div class = "panel-body"> שים לב, משתמש זה נחסם ע״י מנהל מפעלות </div>
       </div>
 
